# AlignTimeStamp

./: CMakeLists.txt  README.md  leastsquare.cpp  ncc.cpp  plot.py
data/: phone_traj.txt
tmp/: phone_rotation_after.txt  result_offset_ncc.txt  vicon_rotation_after.txt  vicon_rotation_before.txt
